feat: add get user devices
