# openapi.yaml
@@ -46,6 +46,34 @@ paths:
           description: Invalid ID param
         '500':
           description: Internal server error
+  /users/{id}/devices:
+    get:
+      summary: Get all devices for a user (protected)
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: List of devices
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DeviceRegistration'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden (user not authorised)
+        '404':
+          description: User not found
+        '500':
+          description: Internal server error
   /login:
     post:
       summary: Login
