# src/routes/userRoutes.ts
@@ -1,6 +1,11 @@
 import { Router } from 'express';
-import { registerUser, getUser } from '../controllers/userController';
+import {
+  registerUser,
+  getUser,
+  getUserDevices
+} from '../controllers/userController';
 import { authenticateUser } from '../middleware/authenticateUser';
+import { checkUserId } from '../middleware/checkUserId';
 
 const router = Router();
 
@@ -10,6 +15,7 @@ router.post('/', registerUser);
 // Protected routes
 router.use(authenticateUser);
 router.get('/:id', getUser);
+router.get('/:id/devices', checkUserId, getUserDevices);
 // Add more protected routes below
 
 export default router;
